[tool.ruff]
target-version = "py310"
line-length = 100
exclude = ["notebooks/", "runs/", ".venv/"]

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "I",    # isort (import sorting)
    "N",    # pep8-naming
    "UP",   # pyupgrade (modern Python syntax)
    "B",    # flake8-bugbear (common gotchas)
    "SIM",  # flake8-simplify
    "RUF",  # ruff-specific rules
]
ignore = [
    "E501",   # line length — handled by formatter
    "B905",   # zip without strict= (annoying in data pipelines)
]

[tool.ruff.lint.isort]
known-first-party = ["envs", "agents", "features", "evaluation", "benchmarks"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "drl-for-trading"
version = "0.1.0"
requires-python = ">=3.10"

[tool.setuptools.packages.find]
include = ["agents*", "envs*", "features*", "evaluation*", "benchmarks*"]
exclude = ["data*", "runs*", "configs*", "notebooks*", "tests*"]
